2001-07-29 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* load XML working (with memory hole)

2001-07-28 Alexander Rawass <alexannika@users.sourceforge.net>

	* new sort of treemap/drawing mode: piemap
	  added file qtreemaparea_piemap.cpp
	  will not get checked in until legal problems solved
	* checkmarks work also for paintmode

	* new options for piemap mode
	* bitmap can be saved to a file
	* tree can be saved as xml file

	* new files & classes
	  qxmltreemapwindow.cpp
	  qxmltreemapwindow.h
	  qxmltreemaparea.cpp
	  qxmltreemap.h
	  (don't work yet)
	
	* new defines for compilation:
	  HAVE_PIEMAP if you have the piemap source
	  EXPERIMENTAL if you want to see more options
	
	
2001-07-17 Alexander Rawass <alexannika@users.sourceforge.net>

	* one can use keywords instead of numbers for options
	* checkmarks start working
	* yet only with drawmode

2001-07-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* user can now use regexps or wildcards in config
	* regexps are now compiled only once at startup
	* wildcards are working correctly
	* regexps need 3 /// backslashes in kdirstatrc
	* Feature: the color list is parsed in alphabetic sort

2001-07-14 Alexander Rawass <alexannika@users.sourceforge.net>

	* KDirTreeMapWindow reads out configuration with KConfig
	* Bug: regexps are not working correctly

2001-07-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* user can click on rectangles and select/deselect them
	* those rectangles are stored in a list and appear
	  at the bottom of the right-button popupmenu
	
2001-07-12 Alexander Rawass <alexannika@users.sourceforge.net>

	* user can search for regexp, matches get highlighted
	* current_dir_display working again

2001-07-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* new shading: image (sensible only with squarify)
	  displays pictures, can be used as picture browser
	* removed most warnings

2001-07-11 Alexander Rawass <alexannika@users.sourceforge.net>
	